nginx/nginx-daemon-set.yaml
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  labels:
    run: nginx
  name: nginx-ds
  namespace:
spec:
  selector:
    matchLabels:
      run: nginx-ds
  template:
    metadata:
      labels:
        run: nginx-ds
    spec:
      hostNetwork: true # using the host node’s network namespace
      containers:
      - image: nginx:latest
        imagePullPolicy: Always
        name: nginx
        ports:
        - name: http
          protocol: TCP
          containerPort: 80          
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
