nginx/nginx-pod-host.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-host
  namespace:
  labels:
    run: nginx
spec:
  #hostNetwork: true # pod using the host node’s network namespace
  hostPID: true # pod to use the host’s PID namespace
  hostIPC: true # pod to use the host’s IPC namespace
  containers:
  - name: container
    image: nginx:latest
    ports:
    - name: http
      protocol: TCP
      containerPort: 80 # nginx can be reached on port 80 of the container
