nginx/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace:
  labels:
    run: nginx
spec:
  containers:
  - name: container-1
    image: nginx:latest
    ports:
    - containerPort: 80
