nginx/nginx-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-np
  labels:
  namespace:
spec:
  ports:
  - protocol: TCP
    #nodePort: 30080 
    port: 9090
    targetPort: 80
  selector:
    run: nginx
  type: NodePort
