nginx/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
  namespace:
spec:
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 80
  selector:
    run: nginx
    # multiple label selectors are permitted
    # app: web
  type: ClusterIP
