nginx/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: user00.kubernetes.noverit.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 9090
